tests/compile-fail/integration_suite__integration__general__pseudo_non_const.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: non-const pseudo-arg
   ┌─ <input>:29:20
   │
29 │         wait(@mask=I0, @blob="10270000");
   │                    ^^ non-const pseudo-arg


